--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".dialog.EditorTutorialDialog"
+            android:theme="@style/popupTheme" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
