--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".DiaryActivity"
-            android:label="@string/title_activity_diary"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:label="@string/title_activity_diary" />
+        <!--            android:theme="@style/AppTheme.NoActionBar" />-->
         <activity
             android:name=".GoalActivity"
-            android:label="@string/title_activity_goal"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_goal" />
+        <!--            android:theme="@style/AppTheme.NoActionBar" />-->
         <activity android:name=".EditorActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -34,7 +33,9 @@
             android:name=".dialog.HabitEditorDialog"
             android:screenOrientation="portrait"
             android:theme="@style/popupTheme" />
-        <receiver android:name=".DeviceBootReceiver"
+
+        <receiver
+            android:name=".DeviceBootReceiver"
             android:enabled="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
